--- a/tampilan/style.css
+++ b/tampilan/style.css
@@ -1,7 +1,7 @@
 :root {
-    --primary: #b6895b;
-    --bg: #010101;
-    --white: #fff;
+    --primary: #c91919cb;
+    --bg: rgb(255, 251, 251);
+    --font: #5C3535;
 }
 
 * {
@@ -14,10 +14,10 @@
 }
 
 body {
-    font-family: 'Sometype Mono', sans-serif;
+    font-family: 'Abhaya Libre', alegreya sans;
     background-color: var(--bg);
-    color: #fff;
-    min-height: 4000px;
+    color: #7a6868;
+    min-height: 3400px;
 }
 
 .navbar {
@@ -25,8 +25,8 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 1.4rem 7%; 
-    background-color: rgba(1, 1, 1, 0.8);
-    border-bottom: 1px solid #513c28;
+    background-color: #b8a2a2cc;
+    border-bottom: 1px solid #a74938;
     position: fixed;
     top: 0;
     left: 0;
@@ -37,23 +37,24 @@ body {
 .navbar .navbar-logo {
     font-size: 2rem;
     font-weight: 700;
-    color: var(--white);
+    color: white;
     font-style: italic;
 }
 
 .navbar .navbar-logo span {
-    color: var(--primary);
+    color: #C83D3D;
 }
 
 .navbar .navbar-nav a {
-    color: var(--white);
+    color: white;
     display: inline-block; 
     font-size: 1.3rem;
+    justify-content: center;
     margin: 0 1rem;
 }
 
 .navbar .navbar-nav a:hover {
-    color: var(--primary);
+    color: var(--font);
     /* kalau kursor diatasnya mengubah warnanya */
 }
 
@@ -61,7 +62,7 @@ body {
     content: '';
     display: block;
     padding-bottom: 0.5rem;
-    border-bottom :0.1rem solid var(--primary);
+    border-bottom :0.1rem solid var(--white);
     transform: scaleX(0);
     transition: 0.2s ease-in-out;
     /* supaya ada garis dibawah navbar nya */
@@ -72,25 +73,63 @@ body {
     /* supaya garis navbarnya muncul pas kursor di atas tombolpi */
 }
 
+
+
 .navbar .navbar-extra a {
-    color: var(--white);
+    color: white;
     margin: 0 0.5rem;
 }
 
 .navbar .navbar-extra a:hover {
-    color: var(--primary);
+    color: var(--font);
 }
 
 #hamburger-menu {
     display: none;
 }
 
-/* hero section */
-.hero {
-    min-height: 100vh;
+.navbar .search-form {
+    position: absolute;
+    background-color: white;
+    border-radius: 5px;
+    width: 35rem;
+    top: 100%;
+    height: 5rem;
     display: flex;
     align-items: center;
-    background-image: url('../image/galeri1.jpeg');
+    right: 10%;
+    padding-left: 10px;
+    transform: scaleY(0);
+    transform-origin: top;
+    transition: 0.2s;
+}
+
+.navbar .search-form.active {
+    transform: scaleY(1);
+}
+
+.navbar .search-form input {
+    height: 100%;
+    width: 100%;
+    font-size: 1rem;
+    color: var(--font);
+    padding: 1rem;
+}
+
+.navbar .search-form label {
+    cursor: pointer;
+    font-size: 1.5rem;
+    margin-right: 1rem;
+    color: var(--font);
+    padding-top: 7px;
+}
+
+/* hero section */
+.hero {
+    min-height: 95vh;
+    display: flex;
+    align-items: center;
+    background-image: url('../image/home.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -103,7 +142,7 @@ body {
     width: 100%;
     height: 30%;
     bottom: 0;
-    background: linear-gradient(0deg, rgba(1, 1, 3, 1) 8%, rgba(255, 255, 255, 0) 50%);
+    background: linear-gradient(0deg, rgb(255, 251, 251) 8%, rgba(255, 255, 241, 0) 50%);
 }
 
 .hero .content {
@@ -112,10 +151,10 @@ body {
 }
 
 .hero .content h1 {
-    font-size: 5rem;
-    color: var(--white);
-    text-shadow: 1px 1px 3px rgba(1,1,3,0.5);
-    line-height: 1.3;
+    font-size: 4rem;
+    color: white;
+    text-shadow: 1px 1px 1px rgba(1,1,3,0.5);
+    line-height: 1;
 }
 
 .hero .content h1 span {
@@ -123,102 +162,288 @@ body {
 }
 
 .hero .content p {
-    font-size: 1.6rem;
     margin-top: 1rem;
-    line-height: 1.4;
-    font-weight: 100;
-    text-shadow: 1px 1px 3px rgba(1,1,3,0.5);
-    mix-blend-mode: difference;
+    text-shadow: 1px 1px 1px rgba(1,1,3,0.5);
+    /* mix-blend-mode: difference; */
+    color: #C83D3D;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    display: flex;
 }
 
 .hero .content .cta {
     margin-top: 1rem;
     display: inline-block;
-    padding: 1rem 3rem;
-    font-size: 1.4rem;
-    color: var(--white);
-    background-color: var(--primary);
-    border-radius: 0.5rem;
-    box-shadow: 1px 1px 3px rgba(1,1,3,0.5);
+    padding: 1rem 2rem;
+    font-size: 1rem;
+    color: #C83D3D;
+    box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.556);
+    border-radius: 20px;
+    background: rgba(239, 231, 231, 0.80);
 }
+
 
 
 /* about section */
 .about, .menu {
-    padding: 10rem 7% 1.4rem;
+    padding: 15rem 7% 1.4rem;
+    padding-top: 3rem;
 }
 
-.about h2, .menu h2{
-    text-align: center;
-    font-size: 2.6rem;
-    margin-bottom: 3rem;
-}
-
-.about h2 span, .menu h2 span {
+ menu h2 span {
     color: var(--primary);
 }
 
-.about .row {
+
+
+.about .row .text {
     display: flex;
-    /* supaya sebelah"an */
+    width: 1227px;
+    height: 500px;
+    flex-shrink: 0;
+    justify-content: center;
 }
 
 .about .row .about-image {
-    flex: 1 1 45rem;
+    width: 450px;
+    height: 450px;
+    flex-shrink: 0;
+    margin-right: 3rem;
+}
+.about .row .judul, .bloomy .row .judul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    color: var(--font);
+    text-align: center;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-family: ABeeZee;
+    font-size: 30px;
+    font-style: normal;
+    line-height: normal;
+    margin-bottom: 2.5rem;
 }
 
-.about .row .about-image img{
-    width: 100%;
-}
-
-.about .row .content {
-    flex: 1 1 35rem;
-    padding: 0 1rem;
-}
-
-.about .row .content h3 {
-    font-size: 1.8rem;
-    margin-bottom: 1rem;
-}
-
-.about .row .content p {
+.about .row article p {
     margin-bottom: 0.8rem;
     font-size: 1.4rem;
     font-weight: 100;
     line-height: 1.6;
+    color: var(--font);
+    font-family: ABeeZee;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-bottom: 2rem;
 }
 
 /* menu section */
-.menu h2 {
-    margin-bottom: 1rem;
-}
-
-.menu p {
-    text-align: center;
-    max-width: 30rem;
-    margin: auto;
-    font-weight: 100;
-    line-height: 1.6;
-}
-
-.menu .row {
-    display: flex;
+.bloomy .row {
+    display: grid;
     flex-wrap: wrap;
     margin-top: 5rem;
     justify-content: center;
+    gap: 1.5rem;
 }
 
-.menu .row .menu-card {
+.bloomy .row .box_koleksi{
+    justify-content: center;
+    display: flex  ;
+    background-color:white;
+    padding: 4rem;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+}
+.bloomy .row .row_koleksi {
+    justify-content: center;
+    display: flex  ;
+    gap: 20px;
+    max-width: 1224px;
+}
+
+.bloomy .row .box_tambahan {
+    gap: 5rem;
+    justify-content: center;
+    display: flex;
+    background-color: white;
+    padding: 4rem;
+}
+
+
+.bloomy .row .column {
+    flex-direction: column;
+    gap: 20px;
+    display: flex;
+}
+
+.column img, .box_tambahan img {
+    border-radius: 5px;
+}
+
+.detail-card .detail-icon .cta-detail1, .detail-card .detail-icon .cta-detail2 {
+    margin-top: 10px;
+    display: inline-block;
+    padding: 0.5rem 1.5rem;
+    font-size: 14px;
+    color: #C83D3D;
+    box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.556);
+    border-radius: 15px;
+    background: rgba(239, 231, 231, 0.80)
+}
+
+.detail-card .detail-icon a:hover, .hero .content .cta:hover {
+    color: whitesmoke;
+    background-color: #5C3535;
+    transition: 0.2s ease-in-out;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    justify-content: center;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    overflow: auto;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(152, 133, 133, 0.5);
+}
+
+.modal-container {
+    position: relative;
+    background-color: #fefefe;
+    color: var(--font);
+    margin: 15% auto;
+    padding: 1.2rem;
+    border: 1px solid #666;
+    width: 60%;
+    height: 30%;
+    animation: slideToBottom 0.5s;
+}
+
+@keyframes slideToBottom {
+    from {
+        top: -300px;
+        opacity: 0;
+    }
+    to {
+        top: 0;
+        opacity: 1;
+    }
+}
+
+.modal-container .close-icon{
+    position: absolute;
+    right: 1rem;
+    color: #000;
+}
+
+.modal-container .close-icon:hover {
+    color:#664e4e;
+}
+
+.modal-content {
+    display: flex;
+    flex-wrap: nowrap;
+    font-size: 1.5rem;
+    padding-left: 10px;
+}
+
+/* CONTACT */
+.contact {
+    /* padding: 8rem 7% 1.4rem; */
+    background-color: #CEBDBD;
+    padding: 1.5Rem;
+    height: auto;
+    border-bottom: 1px solid #a74938;
+    margin-top: 2rem;
+}
+
+.contact h3{
+    color: #FFF;
     text-align: center;
+    font-family: Abhaya Libre;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
 
-.menu .row .menu-card img {
-    border-radius: 50%;
-    width: 80%;
+.contact .ket p{
+    color: #FFF;
+    text-align: center;
+    font-family: Inter;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-top: 0.5rem;
 }
 
-/* .menu .row .menu-card .menu-card-title */
+.contact .row {
+    display: flex;
+    background-color: #fff;
+    border-radius: 1rem;
+    margin: 6rem;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+}
 
+.contact iframe{
+    margin: 2rem;
+    margin-right: 2rem;
+    justify-content: center;
+    height: 20rem;
+}
+
+.contact .row .maps {
+    flex: 1 1 20rem;
+    width: 50%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.information h2{
+    margin-bottom: 2rem;
+    color: #000;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+.information .whatsapp, .information .time, .information .instagram, .information .alamat{
+    display: flex;
+    gap: 20px;
+    margin-bottom: 3rem;
+    
+}
+.information p{
+    color: #000;
+    font-family: Inter;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.contact .row .information {
+    flex: 1 1 20rem;
+    padding: 5rem 2rem;
+    padding: 30px;
+    padding-top: 2rem;
+}
+
+.credit p {
+    color: #000;
+    padding: 5px;
+    background-color: #FFF;
+    margin-left: 1rem;
+}
 
 /* Media Queries laptop */
 @media (max-width: 1366px) {
@@ -241,7 +466,7 @@ body {
         position: absolute;
         top: 100%;
         right: -100%;
-        background-color: var(--white);
+        background-color: var(white);
         width: 30rem;
         height: 100vh;
         transition: 0.3s;
@@ -252,7 +477,7 @@ body {
     }
 
     .navbar .navbar-nav a {
-        color: var(--bg);
+        color: var(--font);
         display: block;
         margin: 1.5rem;
         padding: 0.5rem;
@@ -265,6 +490,11 @@ body {
 
     .navbar .navbar-nav a:hover::after {
         transform: scaleX(0.3);
+    }
+
+    .navbar .search-form {
+        width: 90%;
+        right: 2%;
     }
 
     .about .row {
@@ -288,6 +518,10 @@ body {
 
     .about .row .content p {
         margin-top: 1.5rem;
+    }
+
+    .modal-content {
+        flex-wrap: wrap;
     }
 
 }
