--- a/tampilan/style.css
+++ b/tampilan/style.css
@@ -466,7 +466,7 @@ body {
         position: absolute;
         top: 100%;
         right: -100%;
-        background-color: var(white);
+        background-color: white;
         width: 30rem;
         height: 100vh;
         transition: 0.3s;
@@ -476,6 +476,18 @@ body {
         right: 0;
     }
 
+    .navbar .navbar-nav a::after {
+        content: '';
+        display: block;
+        padding-bottom: 0.5rem;
+        border-bottom: 0.1rem solid var(--font);
+        transform: scaleX(0);
+        transition: 0.2s linear;
+    }
+
+    .navbar .navbar-nav a:hover::after{
+        transform: scaleX(0.5);
+    }
     .navbar .navbar-nav a {
         color: var(--font);
         display: block;
